22. Select footer   - Change background color to black   - Change text color to white  23. Select the p inside footer   - Make sure it is contained using the class of `wrapper`    - Ajust alignment to be centered   - Add padding to the top and bottom with the value of `8px` and set the left and right value to `0`

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,16 @@ figcaption {
   float: none;
 }
 
-.featuredarticles {
+.featured-articles {
   display: none;
+}
+
+footer {
+  background-color: black;
+  color: white;
+}
+
+.wrapper p:last-of-type {
+align-items: center;
+padding: 8px 0;
 }
